--- a/src/stylus/scheduler.styl
+++ b/src/stylus/scheduler.styl
@@ -22,3 +22,13 @@
 body
   height 100%
   font-family 'Roboto', sans-serif !important
+
+  md-content
+    section
+      background-color #eee
+
+      .page-content
+        overflow-y auto
+        padding 2em
+        height calc(100% - 64px - 4em)
+        width 100%
