Connected APIs to services. Did a little bit of styling.

--- a/src/stylus/appointment.styl
+++ b/src/stylus/appointment.styl
@@ -6,9 +6,19 @@
     flex-direction column
     justify-content flex-start
 
+    h4
+      font-size 48px
+      font-weight 200
+      margin 0px 0px 20px -18px
+      text-align center
+
     md-datepicker
       background transparent !important
 
     md-list
       width 100%
       background-color white
+
+      md-icon
+        position relative
+        top -2px
