--- a/src/jade/appointment.jade
+++ b/src/jade/appointment.jade
@@ -3,27 +3,29 @@
   div(layout='row', layout-padding='', layout-margin='')
     .appointment-column(flex='33')
       div
-        h4 1. Select a date for your appointment
+        h4 1. Select a date
         md-datepicker(ng-model='appointment_date', ng-change='on_calendar_change()', md-placeholder='Select date',
             md-min-date='min_date', md-max-date='max_date', md-date-filter='weekdays_filter')
 
     .appointment-column(flex='33', ng-show='available_times.length')
-      h4 2. Select from available times
+      h4 2. Select a time
       md-list
         md-list-item(ng-repeat='time in available_times', ng-click='schedule(time)')
           md-icon access_time
-          p {{ time }}
+          p {{ time | date:'h:mm a' }}
           md-icon.md-accent arrow_forward
 
     .appointment-column(flex='33', ng-show='appointment_time')
-      h4 3. Confirm your appointment
+      h4 3. Confirm
       md-card
         md-card-title
           md-card-title-text
-            h3 Your appointment
+            span.md-headline Your appointment
         md-card-content
           p Dr. Whosit
-          p {{ appointment_date | date:'shortDate' }} @ {{ appointment_time }}
+          p
+            span {{ appointment_date | date:'fullDate' }} @&nbsp;
+            b {{ appointment_time | date:'h:mm a' }}
         md-card-actions(layout='row', layout-align='end center')
           md-button(ng-click='reset()') Start Over
-          md-button.md-raised.md-accent Confirm
+          md-button.md-raised.md-accent(ng-click='submit()') Confirm
