--- a/src/stylus/appointment.styl
+++ b/src/stylus/appointment.styl
@@ -2,15 +2,18 @@
 
   .appointment-column
     min-height 420px
-    background-color #eee
+    background-color #f7f7f7
     flex-direction column
     justify-content flex-start
 
     h4
       font-size 48px
       font-weight 200
-      margin 0px 0px 20px -18px
+      margin -8px -8px 24px -8px
+      padding 8px
       text-align center
+      background-color #0098cc
+      color white
 
     md-datepicker
       background transparent !important
