Better styling for card title.

--- a/src/stylus/scheduler.styl
+++ b/src/stylus/scheduler.styl
@@ -32,3 +32,9 @@ body
         padding 2em
         height calc(100% - 64px - 4em)
         width 100%
+
+        & > md-card > md-card-title
+          padding-left 40px
+
+          & md-card-title-text > span.md-headline
+            font-weight 300
