--- a/src/index.jade
+++ b/src/index.jade
@@ -6,17 +6,21 @@ html
     link(rel='shortcut icon', type='image/png', href='img/favicon.ico')
     link(href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic,100,100italic,300,300italic,500,500italic,900,900italic&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic', rel='stylesheet', type='text/css')
     script(src='js/compress.min.js')
+    script(src='https://apis.google.com/js/platform.js', async='', defer='')
+    meta(name='google-signin-client_id', content='955706659487-djfv8ae1naaaliu481lsd2h59d5nd442.apps.googleusercontent.com')
     title Coaching Scheduler
 
-  body(ng-app='Scheduler', ng-controller='SchedulerCtrl', ng-cloak='')
-    md-content
+  body
+    include jade/login
+
+    md-content(ng-controller='SchedulerCtrl', ng-cloak='')
       include jade/toolbar
 
       section(layout='row', flex='')
         .page-content
-            md-card
-              md-card-title
-                md-card-title-text
-                  span.md-headline Schedule Your Coaching Session
-              md-card-content
-                include jade/appointment
+          md-card
+            md-card-title
+              md-card-title-text
+                span.md-headline Schedule Your Coaching Session
+            md-card-content
+              include jade/appointment
