--- a/src/jade/toolbar.jade
+++ b/src/jade/toolbar.jade
@@ -1,3 +1,15 @@
 md-toolbar.md-hue-1.md-whiteframe-z1
   .md-toolbar-tools
     h2 Coaching Scheduler
+    span(flex='')
+    span.username {{ username }}
+
+    md-menu(md-position-mode='target-right target', md-offset='0 65')
+      md-button.md-icon-button(aria-label='Open avatar menu', ng-click='$mdOpenMenu($event)')
+        img.avatar(ng-src='{{ avatar }}')
+      md-menu-content(width='3')
+        md-menu-item
+          md-button(ng-click='logout()')
+            div(layout='row')
+              p(flex='') Log out
+              md-icon(md-menu-align-target='') exit_to_app
