Pass the coach_id and client_id to the appointment API. Several look and feel fixes.

--- a/src/index.jade
+++ b/src/index.jade
@@ -21,6 +21,6 @@ html
           md-card
             md-card-title
               md-card-title-text
-                span.md-headline Schedule Your Coaching Session
+                span.md-headline {{ first_name }}, let's schedule your coaching session with {{ client.coach.name }}.
             md-card-content
               include jade/appointment
