--- a/src/jade/toolbar.jade
+++ b/src/jade/toolbar.jade
@@ -1,4 +1,4 @@
-md-toolbar.md-hue-1.md-whiteframe-z1
+md-toolbar.md-whiteframe-z1(md-theme='grey-theme')
   .md-toolbar-tools
     h2 Coaching Scheduler
     span(flex='')
