--- a/src/stylus/appointment.styl
+++ b/src/stylus/appointment.styl
@@ -7,7 +7,7 @@
     justify-content flex-start
 
     h4
-      font-size 48px
+      font-size 36px
       font-weight 200
       margin -8px -8px 24px -8px
       padding 8px
@@ -25,3 +25,6 @@
       md-icon
         position relative
         top -2px
+
+    md-card-actions
+      margin-top 30px
