--- a/src/jade/appointment.jade
+++ b/src/jade/appointment.jade
@@ -1,32 +1,39 @@
-.appointment(ng-controller='AppointmentCtrl')
+md-card.appointment(ng-controller='AppointmentCtrl')
+  md-card-title
+    md-card-title-text
+      span.md-headline(ng-hide='is_scheduled')
+        | {{ first_name }}, let's schedule your coaching session with {{ client.coach.name }}.
+      span.md-headline(ng-show='is_scheduled')
+        | {{ first_name }}, you have scheduled a coaching session with {{ client.coach.name }}.
 
-  div(layout='row', layout-padding='', layout-margin='')
-    .appointment-column(flex='33')
-      div
-        h4 1. Select a date
-        md-datepicker(ng-model='appointment_date', ng-change='on_calendar_change()', md-placeholder='Select date',
-            md-min-date='min_date', md-max-date='max_date', md-date-filter='weekdays_filter')
+  md-card-content
 
-    .appointment-column(flex='33', ng-show='available_times.length')
-      h4 2. Select a time
-      md-list
-        md-list-item(ng-repeat='time in available_times', ng-click='schedule(time)')
-          md-icon access_time
-          p {{ time | date:'h:mm a' }}
-          md-icon.md-primary arrow_forward
+    div(layout='row', layout-padding='', layout-margin='', ng-show='is_scheduled')
+      .your-appointment(flex='33')
+        md-card
+          include appointment_card
+          md-card-actions(layout='row', layout-align='end center')
+            md-button.md-raised.md-primary(ng-click='reset()') Reschedule?
 
-    .appointment-column(flex='33', ng-show='appointment_time')
-      h4 3. Confirm
-      md-card
-        md-card-title
-          md-card-title-text
-            span.md-headline Your appointment
-        md-card-content
-          p {{ client.coach.name }}
-          p {{ client.coach.phone }}
-          p
-            span {{ appointment_date | date:'fullDate' }} @&nbsp;
-            b {{ appointment_time | date:'h:mm a' }}
-        md-card-actions.confirm-actions(layout='row', layout-align='end center')
-          md-button(ng-click='reset()') Start Over
-          md-button.md-raised.md-primary(ng-click='submit()') Confirm
+    div(layout='row', layout-padding='', layout-margin='', ng-hide='is_scheduled')
+      .appointment-column(flex='33')
+        div
+          h4 1. Select a date
+          md-datepicker(ng-model='appointment_date', ng-change='on_calendar_change()', md-placeholder='Select date',
+              md-min-date='min_date', md-max-date='max_date', md-date-filter='weekdays_filter')
+
+      .appointment-column(flex='33', ng-show='available_times.length')
+        h4 2. Select a time
+        md-list
+          md-list-item(ng-repeat='time in available_times', ng-click='schedule(time)')
+            md-icon access_time
+            p {{ time | date:'h:mm a' }}
+            md-icon.md-primary arrow_forward
+
+      .appointment-column(flex='33', ng-show='appointment_time')
+        h4 3. Confirm
+        md-card
+          include appointment_card
+          md-card-actions(layout='row', layout-align='end center')
+            md-button(ng-click='reset()') Start Over
+            md-button.md-raised.md-primary(ng-click='submit()') Confirm
