--- a/src/stylus/material.styl
+++ b/src/stylus/material.styl
@@ -2,5 +2,8 @@ md-card-title
   min-height 30px
   max-height 30px
 
+md-card-actions
+  margin 12px 16px !important
+
 .md-scroll-mask
   z-index 0 !important
