--- a/src/index.jade
+++ b/src/index.jade
@@ -1,7 +1,7 @@
 html
   head
     meta(name='viewport' content='initial-scale=1, maximum-scale=1, user-scalable=no')
-    link(rel='stylesheet', href='css/compress.min.css')
+    link(rel='stylesheet', href='css/angular-material.min.css')
     link(rel='stylesheet', href='css/stylus.min.css')
     link(rel='shortcut icon', type='image/png', href='img/favicon.ico')
     link(href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic,100,100italic,300,300italic,500,500italic,900,900italic&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic', rel='stylesheet', type='text/css')
