Better box shadows. Changed color of Your Appointment card.

--- a/src/stylus/appointment.styl
+++ b/src/stylus/appointment.styl
@@ -1,5 +1,8 @@
 .appointment
 
+  .your-appointment > md-card
+    background-color #eee
+
   .appointment-column
     min-height 420px
     background-color #f7f7f7
@@ -26,5 +29,8 @@
         position relative
         top -2px
 
-    md-card-actions
-      margin-top 30px
+    md-card
+      box-shadow none
+
+      md-card-actions
+        margin-top 30px
