--- a/src/jade/appointment.jade
+++ b/src/jade/appointment.jade
@@ -1,4 +1,4 @@
-md-card.appointment(ng-controller='AppointmentCtrl')
+md-card.appointment.md-whiteframe-z2(ng-controller='AppointmentCtrl')
   md-card-title
     md-card-title-text
       span.md-headline(ng-hide='is_scheduled')
@@ -16,13 +16,13 @@ md-card.appointment(ng-controller='AppointmentCtrl')
             md-button.md-raised.md-primary(ng-click='reset()') Reschedule?
 
     div(layout='row', layout-padding='', layout-margin='', ng-hide='is_scheduled')
-      .appointment-column(flex='33')
+      .appointment-column.md-whiteframe-z1(flex='33')
         div
           h4 1. Select a date
           md-datepicker(ng-model='appointment_date', ng-change='on_calendar_change()', md-placeholder='Select date',
               md-min-date='min_date', md-max-date='max_date', md-date-filter='weekdays_filter')
 
-      .appointment-column(flex='33', ng-show='available_times.length')
+      .appointment-column.md-whiteframe-z1(flex='33', ng-show='available_times.length')
         h4 2. Select a time
         md-list
           md-list-item(ng-repeat='time in available_times', ng-click='schedule(time)')
@@ -30,7 +30,7 @@ md-card.appointment(ng-controller='AppointmentCtrl')
             p {{ time | date:'h:mm a' }}
             md-icon.md-primary arrow_forward
 
-      .appointment-column(flex='33', ng-show='appointment_time')
+      .appointment-column.md-whiteframe-z1(flex='33', ng-show='appointment_time')
         h4 3. Confirm
         md-card
           include appointment_card
