--- a/src/stylus/appointment.styl
+++ b/src/stylus/appointment.styl
@@ -3,7 +3,12 @@
   .your-appointment > md-card
     background-color #eee
 
+  .your-appointment-content md-icon
+    position relative
+    left 8px
+
   .appointment-column
+    max-width calc(33.33% - 16px)
     min-height 420px
     background-color #f7f7f7
     flex-direction column
