--- a/src/index.jade
+++ b/src/index.jade
@@ -1,6 +1,6 @@
 html
   head
-    meta(name='viewport' content='initial-scale=1, maximum-scale=1, user-scalable=no')
+    meta(name='viewport', content='initial-scale=1, maximum-scale=1, user-scalable=no')
     link(rel='stylesheet', href='css/angular-material.min.css')
     link(rel='stylesheet', href='css/stylus.min.css')
     link(rel='shortcut icon', type='image/png', href='img/favicon.ico')
