--- a/src/jade/appointment.jade
+++ b/src/jade/appointment.jade
@@ -8,21 +8,21 @@ md-card.appointment.md-whiteframe-z2(ng-controller='AppointmentCtrl')
 
   md-card-content
 
-    div(layout='row', layout-padding='', layout-margin='', ng-show='is_scheduled')
-      .your-appointment(flex='33')
+    div.scheduled-row(layout='row', layout-padding='', layout-margin='', ng-show='is_scheduled')
+      .your-appointment(flex='100', flex-gt-xs='75', flex-gt-sm='50', flex-gt-md='33')
         md-card
           include appointment_card
           md-card-actions(layout='row', layout-align='end center')
             md-button.md-raised.md-primary(ng-click='reset()') Reschedule?
 
-    div(layout='row', layout-padding='', layout-margin='', ng-hide='is_scheduled')
-      .appointment-column.md-whiteframe-z1(flex='33', ng-hide='is_scheduled')
+    div.unscheduled-row(layout='column', layout-gt-sm='row', layout-padding='', layout-margin='', ng-hide='is_scheduled')
+      .appointment-column.md-whiteframe-z1(flex='100', flex-gt-sm='33', ng-hide='is_scheduled')
         div
           h4 1. Select a date
           md-datepicker(ng-model='appointment_date', ng-change='on_calendar_change()', md-placeholder='Select date',
               md-min-date='min_date', md-max-date='max_date', md-date-filter='weekdays_filter')
 
-      .appointment-column.md-whiteframe-z1(flex='33', ng-show='available_times.length')
+      .appointment-column.md-whiteframe-z1(flex='100', flex-gt-sm='33', ng-show='available_times.length')
         h4 2. Select a time
         md-list
           md-list-item(ng-repeat='time in available_times', ng-click='schedule(time)')
@@ -30,7 +30,7 @@ md-card.appointment.md-whiteframe-z2(ng-controller='AppointmentCtrl')
             p {{ time | date:'h:mm a' }}
             md-icon.md-primary arrow_forward
 
-      .appointment-column.md-whiteframe-z1(flex='33', ng-show='appointment_time')
+      .appointment-column.md-whiteframe-z1(flex='100', flex-gt-sm='33', ng-show='appointment_time')
         h4 3. Confirm
         md-card
           include appointment_card
