--- a/src/stylus/appointment.styl
+++ b/src/stylus/appointment.styl
@@ -29,6 +29,8 @@
     md-list
       width 100%
       background-color white
+      overflow-y auto
+      max-height 314px
 
       md-icon
         position relative
@@ -36,6 +38,24 @@
 
     md-card
       box-shadow none
+      margin 0
+      height 330px
 
       md-card-actions
         margin-top 30px
+
+
+@media (max-width: 600px)
+  .appointment
+    .scheduled-row,
+    .your-appointment
+      margin-left 0
+      margin-right 0
+      margin-top 20px
+      padding-left 0
+      padding-right 0
+
+    .appointment-column
+      max-width 100%
+      min-height 420px
+      max-height 420px
