--- a/src/stylus/scheduler.styl
+++ b/src/stylus/scheduler.styl
@@ -19,16 +19,19 @@
   -webkit-font-feature-settings 'liga'
   -webkit-font-smoothing antialiased
 
+html
+  overflow hidden
+
 body
   height 100%
   font-family 'Roboto', sans-serif !important
 
   md-content
     section
+      height calc(100% - 64px)
       background-color #eee
 
       .page-content
-        overflow-y auto
         padding 2em
         height calc(100% - 64px - 4em)
         width 100%
@@ -38,3 +41,13 @@ body
 
           & md-card-title-text > span.md-headline
             font-weight 300
+
+@media (max-width: 600px)
+  body > md-content > section > .page-content
+    padding 0
+    background-color white
+    min-height 100%
+
+    & > md-card
+      margin 0
+      box-shadow none
