Added coach registration. Added URL router.

--- a/src/index.jade
+++ b/src/index.jade
@@ -17,5 +17,4 @@ html
       include jade/toolbar
 
       section(layout='row', flex='')
-        .page-content
-          include jade/appointment
+        .page-content.ng-view
