Added appointments to coach portal.

--- a/src/jade/coach_portal.jade
+++ b/src/jade/coach_portal.jade
@@ -1,4 +1,21 @@
 md-card.coach-portal.md-whiteframe-z2
   md-card-title
     md-card-title-text
-      span.md-headline Hello {{ user.first_name }}!
+      span.md-headline Welcome Coach {{ user.first_name }}, here are your appointments.
+    md-card-title-media
+      md-input-container.md-block(md-no-float='')
+        md-icon search
+        input(ng-model='appointment_filter', type='text', placeholder='Search by name')
+
+  md-card-content
+    p(ng-hide='appointments.length') You have no scheduled appointments.
+
+    md-list
+      md-list-item.client-row(ng-repeat='appointment in appointments | filter: { client: { name: appointment_filter } }')
+        img.md-avatar(ng-src='{{ appointment.client.avatar }}')
+        p {{ appointment.client.name }}
+        p {{ appointment.client.email }}
+        p {{ appointment.client.phone }}
+        p
+          span {{ appointment.appointment_date | date:'EEE, MMM d, y' }} @&nbsp;
+          b {{ appointment.appointment_date | date:'h:mm a' }}
