--- a/src/stylus/animation.styl
+++ b/src/stylus/animation.styl
@@ -12,3 +12,20 @@
   position relative
   top 0px
   opacity 1
+
+.client-row.ng-enter,
+.client-row.ng-leave
+  -webkit-transition 0.2s ease all
+  transition 0.2s ease all
+
+.client-row.ng-enter,
+.client-row.ng-leave.ng-leave-active
+  opacity 0
+  position relative
+  left -20px
+
+.client-row.ng-leave,
+.client-row.ng-enter.ng-enter-active
+  opacity 1
+  position relative
+  left 0px
