--- a/src/stylus/coach-portal.styl
+++ b/src/stylus/coach-portal.styl
@@ -2,3 +2,7 @@
   md-card-title-media > md-input-container
     margin-top 10px
     margin-bottom 0
+
+  .no-appointments
+    margin-left 30px
+    margin-top 30px
