--- a/src/jade/toolbar.jade
+++ b/src/jade/toolbar.jade
@@ -1,6 +1,6 @@
 md-toolbar.md-whiteframe-z1(md-theme='grey-theme')
   .md-toolbar-tools
-    img.brand(src='https://arivale-corporate-site-media.s3.amazonaws.com/wp-content/uploads/2016/01/07010917/arivale-logo-wp.png')
+    img.brand(src='/img/logo.png')
     span(flex='')
     span.username {{ user.username }}
 
