Lots of code reorganization. Added default avatars.

--- a/src/jade/appointment_card.jade
+++ b/src/jade/appointment_card.jade
@@ -4,7 +4,8 @@ md-card-title
 md-card-content.your-appointment-content
   md-list
     md-list-item
-      img.md-avatar(ng-src='{{ client.coach.avatar }}')
+      img.md-avatar(ng-show='client.coach.avatar', ng-src='{{ client.coach.avatar }}')
+      md-icon.md-avatar-icon(ng-hide='client.coach.avatar') person
       p {{ client.coach.name }}
     md-list-item
       md-icon phone
