--- a/src/jade/coach_portal.jade
+++ b/src/jade/coach_portal.jade
@@ -12,10 +12,10 @@ md-card.coach-portal.md-whiteframe-z2
 
     md-list
       md-list-item.client-row(ng-repeat='appointment in appointments | filter: { client: { name: appointment_filter } }')
-        img.md-avatar(ng-src='{{ appointment.client.avatar }}')
+        img.md-avatar(ng-show='appointment.client.avatar', ng-src='{{ appointment.client.avatar }}')
+        md-icon.md-avatar-icon(ng-hide='appointment.client.avatar') person
         p {{ appointment.client.name }}
         p {{ appointment.client.email }}
-        p {{ appointment.client.phone }}
         p
           span {{ appointment.appointment_date | date:'EEE, MMM d, y' }} @&nbsp;
           b {{ appointment.appointment_date | date:'h:mm a' }}
