--- a/src/stylus/toolbar.styl
+++ b/src/stylus/toolbar.styl
@@ -8,9 +8,13 @@ md-toolbar
     font-size 14px
     margin-right 10px
 
-  .avatar
-    max-height 40px
-    max-width 40px
-    margin-left -8px
-    margin-top -8px
-    cursor pointer
+  .md-icon-button
+    background-color #e7e7e7
+    margin-right 6px !important
+
+    .avatar
+      max-height 40px
+      max-width 40px
+      margin-left -8px
+      margin-top -8px
+      cursor pointer
