Submit phone form on enter.

--- a/src/jade/template/phone_dialog.jade
+++ b/src/jade/template/phone_dialog.jade
@@ -1,5 +1,5 @@
 md-dialog.phone-dialog(aria-label='Phone entry dialog', ng-cloak='')
-  form(name='phoneForm')
+  form(name='phoneForm', ng-submit='submit_phone()')
 
     md-dialog-content
       .md-dialog-content
