--- a/src/stylus/coach-portal.styl
+++ b/src/stylus/coach-portal.styl
@@ -1,4 +1,7 @@
 .coach-portal
+  md-card-title-text b
+    font-weight 400
+
   md-card-title-media > md-input-container
     margin-top 10px
     margin-bottom 0
