--- a/src/jade/page/client.jade
+++ b/src/jade/page/client.jade
@@ -20,10 +20,10 @@ md-card.client.md-whiteframe-z2
     div.unscheduled-row(layout='column', layout-gt-sm='row', layout-padding='', layout-margin='', ng-hide='is_scheduled')
 
       .appointment-column.md-whiteframe-z1(flex='100', flex-gt-sm='33', ng-hide='is_scheduled')
-        div
+        div(ng-controller='CalendarCtrl')
           h4 1. Select a date
-          md-datepicker(ng-model='appointment_date', ng-change='on_calendar_change()', md-placeholder='Select date',
-              md-min-date='min_date', md-max-date='max_date', md-date-filter='weekdays_filter')
+          md-datepicker(ng-model='$parent.appointment_date', ng-change='on_calendar_change()',
+              md-placeholder='Select date', md-min-date='min_date', md-max-date='max_date', md-date-filter='weekdays_filter')
 
       .appointment-column.md-whiteframe-z1(flex='100', flex-gt-sm='33', ng-show='appointments.available.length || appointments.none_available')
         h4 2. Select a time
