--- a/src/jade/page/client.jade
+++ b/src/jade/page/client.jade
@@ -10,37 +10,13 @@ md-card.client.md-whiteframe-z2
   md-card-content
 
     div.scheduled-row(layout='row', layout-padding='', layout-margin='', ng-show='is_scheduled')
-
       .your-appointment(flex='100', flex-gt-xs='75', flex-gt-sm='50', flex-gt-md='33')
-        md-card
-          include ../template/appointment_card
-          md-card-actions(layout='row', layout-align='end center')
-            md-button.md-raised.md-primary(ng-click='reset()') Reschedule?
+        include ../partial/your-appointment
 
     div.unscheduled-row(layout='column', layout-gt-sm='row', layout-padding='', layout-margin='', ng-hide='is_scheduled')
-
       .appointment-column.md-whiteframe-z1(flex='100', flex-gt-sm='33', ng-hide='is_scheduled')
-        div(ng-controller='CalendarCtrl')
-          h4 1. Select a date
-          md-datepicker(ng-model='$parent.appointment_date', ng-change='on_calendar_change()',
-              md-placeholder='Select date', md-min-date='min_date', md-max-date='max_date', md-date-filter='weekdays_filter')
-
+        include ../partial/select-date
       .appointment-column.md-whiteframe-z1(flex='100', flex-gt-sm='33', ng-show='appointments.available.length || appointments.none_available')
-        h4 2. Select a time
-        md-list(ng-show='appointments.available.length')
-          md-list-item(ng-repeat='time in appointments.available', ng-click='schedule(time)')
-            md-icon access_time
-            p {{ time | date:'h:mm a' }}
-            md-icon.md-primary arrow_forward
-        p(ng-show='appointments.none_available')
-          | We're sorry, there are no available appointments on {{ appointment_date | date:'longDate' }}. Please choose another date.
-
+        include ../partial/select-time
       .appointment-column.md-whiteframe-z1(flex='100', flex-gt-sm='33', ng-show='appointment_time')
-        h4 3. Confirm
-        md-card
-          include ../template/appointment_card
-          md-card-actions(layout='row', layout-align='end center')
-            md-button(ng-click='reset()') Start Over
-            md-button.md-raised.md-primary(ng-click='submit()', ng-disabled='is_submitting')
-              span(ng-hide='is_submitting') Confirm
-              span(ng-show='is_submitting') Submitting
+        include ../partial/confirm
