--- a/templates/email/reminder.jade
+++ b/templates/email/reminder.jade
@@ -2,7 +2,5 @@
   img(src='cid:arivale-logo', style='max-height: 40px; margin-bottom: 20px;')
   p(style='margin-bottom: 30px;') #{name}:
   h2(style='font-weight: normal;') You have scheduled an Arivale coaching appointment
-  p Please put your appointment with #{coach} on your calendar:
-  p
-    b(style='margin-left: 20px;') #{date}
+  p Please add your appointment with #{coach} to your calendar.
   p(style='margin-top: 40px;') Thank you for using Arivale!
