Don't reposition avatar icons.

--- a/src/stylus/page/client.styl
+++ b/src/stylus/page/client.styl
@@ -3,7 +3,7 @@
   .your-appointment > md-card
     background-color #eee
 
-  .your-appointment-content md-icon
+  .your-appointment-content md-icon:not(.md-avatar-icon)
     position relative
     left 8px
 
